k8s/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  strategy: 
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: devopstrainingschool/project1
          ports:
            - containerPort: 8080
          command: 
          - /bin/bash
          - -c 
          - |
            commandhere1
            commandhere2
          imagePullPolicy: Always
